# spork

./: .gitignore  Makefile
spork-lib/: spork-lib.cabal  stack.yaml
spork-lib/Spork/: Config.hs  Database.hs  DatabaseConfig.hs  Generics.hs  Parallel.hs  Tasks.hs  Time.hs
spork-migrate/: spork-migrate.cabal
spork-migrate/src/: Migrate.hs
spork-spock/: spork-spock.cabal  stack.yaml
spork-spock/Spork/: Middleware.hs  Spock.hs
spork/spork-lib/: spork-lib.cabal
spork/spork-lib/Spork/: Database.hs  DatabaseConfig.hs  Tasks.hs  Time.hs
spork/spork-migrate/: stack.yaml
